<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LpmsMainActivity</string>
    <string name="discovered_lpms_b_devices">Discovered LPMS-B Devices</string>
    <string name="connected_lpms_b_devices">Connected LPMS-B Devices</string>
    <string name="logging_status">Logging Status</string>
    <string name="logging_is_off">Logging is OFF</string>
    <string name="connection_control">Connection Control</string>
    <string name="discover">Discover</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="logging">Logging</string>
    <string name="start_logging">Start logging</string>
    <string name="stop_logging">Stop logging</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="magnetometer">Magnetometer</string>
    <string name="logging_to">Logging to</string>
    <string name="linear_acceleration">Linear Acceleration</string>
    <string name="euler_angle">Euler Angle</string>
    <string name="quaternion">Quaternion</string>
    <string name="measuring">measuring</string>
    <string name="stopped">stopped</string>
</resources>
